<resources>
    <string name="app_name">Activder</string>
    <string name="button_loggin">Zaloguj się</string>
    <string name="button_register">Nie masz konta? Zarejestruj się</string>
    <string name="button_search">Wyszukaj</string>
    <string name="button_add">Dodaj Wydarzenie</string>
    <string name="button_config">Ustawienia</string>
    <string name="log_name">Login</string>
    <string name="password_name">Hasło</string>
    <string name="button_log">Zaloguj się</string>
    <string name="log_hint">Nieporawne hasło</string>
    <string name="button_create">Dodaj Wydarzenie</string>
    <string name="event_text">Podsumowanie wydarzenia</string>
    <string name="text_search">Wpisz wyszukiwaną frazę</string>
    <string name="button_search_search">Wyszukaj</string>
    <string name="text_create"></string>
    <string name="button_back">zmień</string>
    <string name="button_approve">Zatwierdź</string>
    <string-array name="spinner_discipline">
        <item>Piłka Nożna</item>
        <item>Koszykówka</item>
        <item>Siatkówka</item>
    </string-array>
    <string-array name="spinner_date">
        <item>01.02.2012</item>
        <item>02.03.2023</item>
    </string-array>
    <string-array name="spinner_time">
        <item>12:00</item>
        <item>14:00</item>
    </string-array>
    <string-array name="spinner_localization">
        <item>Ołbin</item>
        <item>Leśnica</item>
    </string-array>
    <string-array name="spinner_level">
        <item>intermediate</item>
        <item>Expert</item>
    </string-array>

</resources>