<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context=".Logging_Activity">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:src="@drawable/duck"
    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp">
<Button
    android:id="@+id/button_register"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_loggin"
    android:onClick="onLogging"/>
    <Button
        android:id="@+id/button_loggin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:onClick="onRegister"
        android:hint="@string/log_hint"/>
</LinearLayout>





</FrameLayout>
