<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context=".LogActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/duck"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="16dp">

        <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/log_name"
      android:text="@string/log_name"/>
       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/password_name"
           android:text="@string/password_name" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button_log"
            android:text="@string/button_log"
            android:onClick="onLog"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_hint"
            android:text=""/>

    </LinearLayout>





</FrameLayout>
